--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
     <button onclick="calculateTotal()">Розрахувати</button>
     <div class="total" id="total">Загальна сума: 0 грн.</div>
 
-    <p>Якщо ви готові оплатити, натисніть <a href="https://www.privat24.ua/send/1kmky" target="_blank">тут</a>.</p>
-
+    <p>Якщо ви готові оплатити на карту 
+     </div> Приват 4731 2196 5031 5447   
     <script>
         function calculateTotal() {
             var format1Quantity = parseInt(document.getElementById('format1Quantity').value);
