Update-2 index.html
оновив карту

--- a/index.html
+++ b/index.html
@@ -89,8 +89,10 @@
     <button onclick="calculateTotal()">Розрахувати</button>
     <div class="total" id="total">Загальна сума: 0 грн.</div>
 
-    <p>Якщо ви готові оплатити на карту 
-     </div> Приват 4731 2196 5031 5447   
+    <p>Якщо ви готові оплатити 
+    <p>Карта ПриватБанку:
+    </p>
+    <p><strong>4731 2196 5031 5447</strong></p>   
     <script>
         function calculateTotal() {
             var format1Quantity = parseInt(document.getElementById('format1Quantity').value);
