--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@
         <input type="number" id="format4Quantity" value="0" min="0">
         <span>шт.</span>
     </div>
+     <div class="format-row">
+        <label for="format4">Магніт 7,5х10 см- Ціна:</label>
+        <input type="number" id="format4Price" value="35" readonly>
+        <input type="number" id="format4Quantity" value="0" min="0">
+        <span>шт.</span>
+    </div>
     <div class="format-row">
         <label for="format5">Фото без друку - Ціна:</label>
         <input type="number" id="format5Price" value="8" readonly>
@@ -100,8 +106,10 @@
             var format3Quantity = parseInt(document.getElementById('format3Quantity').value);
             var format4Quantity = parseInt(document.getElementById('format4Quantity').value);
             var format5Quantity = parseInt(document.getElementById('format5Quantity').value);
+            var format6Quantity = parseInt(document.getElementById('format5Quantity').value);
 
-            if (isNaN(format1Quantity) || isNaN(format2Quantity) || isNaN(format3Quantity) || isNaN(format4Quantity) || isNaN(format5Quantity)) {
+
+            if (isNaN(format1Quantity) || isNaN(format2Quantity) || isNaN(format3Quantity) || isNaN(format4Quantity) || isNaN(format5Quantity)|| isNaN(format6Quantity)) {
                 alert("Будь ласка, введіть число в поле кількості.");
                 return;
             }
@@ -111,8 +119,10 @@
             var format3Price = parseInt(document.getElementById('format3Price').value);
             var format4Price = parseInt(document.getElementById('format4Price').value);
             var format5Price = parseInt(document.getElementById('format5Price').value);
+            var format6Price = parseInt(document.getElementById('format5Price').value);
 
-            var total = (format1Price * format1Quantity) + (format2Price * format2Quantity) + (format3Price * format3Quantity) + (format4Price * format4Quantity) + (format5Price * format5Quantity);
+
+            var total = (format1Price * format1Quantity) + (format2Price * format2Quantity) + (format3Price * format3Quantity) + (format4Price * format4Quantity) + (format5Price * format5Quantity) + (format6Price * format6Quantity);
 
             document.getElementById('total').innerHTML = 'Загальна сума: ' + total + ' грн.';
         }
