--- a/index.html
+++ b/index.html
@@ -81,15 +81,32 @@
         <span>шт.</span>
     </div>
      <div class="format-row">
-        <label for="format4">Магніт 7,5х10 см- Ціна:</label>
+        <label for="format5">Магніт 7,5х10 см- Ціна:</label>
         <input type="number" id="format5Price" value="35" readonly>
         <input type="number" id="format5Quantity" value="0" min="0">
         <span>шт.</span>
     </div>
     <div class="format-row">
-        <label for="format5">Фото без друку - Ціна:</label>
-        <input type="number" id="format6Price" value="8" readonly>
+        <label for="format6">Магніт 10х15 см- Ціна:</label>
+        <input type="number" id="format6Price" value="60" readonly>
         <input type="number" id="format6Quantity" value="0" min="0">
+        <span>шт.</span>
+    </div>
+    <div class="format-row">
+        <label for="format7">Магніт 78х52 мм- Ціна:</label>
+        <input type="number" id="format7Price" value="50" readonly>
+        <input type="number" id="format7Quantity" value="0" min="0">
+        <span>шт.</span>
+    </div><div class="format-row">
+        <label for="format8">Магніт 95х65 мм- Ціна:</label>
+        <input type="number" id="format8Price" value="60" readonly>
+        <input type="number" id="format8Quantity" value="0" min="0">
+        <span>шт.</span>
+    </div>
+    <div class="format-row">
+        <label for="format9">Фото без друку - Ціна:</label>
+        <input type="number" id="format9Price" value="8" readonly>
+        <input type="number" id="format9Quantity" value="0" min="0">
         <span>шт.</span>
     </div>
     <button onclick="calculateTotal()">Розрахувати</button>
@@ -107,9 +124,14 @@
             var format4Quantity = parseInt(document.getElementById('format4Quantity').value);
             var format5Quantity = parseInt(document.getElementById('format5Quantity').value);
             var format6Quantity = parseInt(document.getElementById('format6Quantity').value);
+            var format7Quantity = parseInt(document.getElementById('format7Quantity').value);
+            var format8Quantity = parseInt(document.getElementById('format8Quantity').value);
+            var format9Quantity = parseInt(document.getElementById('format9Quantity').value);
 
 
-            if (isNaN(format1Quantity) || isNaN(format2Quantity) || isNaN(format3Quantity) || isNaN(format4Quantity) || isNaN(format5Quantity)|| isNaN(format6Quantity)) {
+
+            if (isNaN(format1Quantity) || isNaN(format2Quantity) || isNaN(format3Quantity) || isNaN(format4Quantity) || isNaN(format5Quantity)|| isNaN(format6Quantity)||
+                isNaN(format7Quantity) || isNaN(format8Quantity)|| isNaN(format9Quantity)) {
                 alert("Будь ласка, введіть число в поле кількості.");
                 return;
             }
@@ -120,9 +142,16 @@
             var format4Price = parseInt(document.getElementById('format4Price').value);
             var format5Price = parseInt(document.getElementById('format5Price').value);
             var format6Price = parseInt(document.getElementById('format6Price').value);
+            var format7Price = parseInt(document.getElementById('format7Price').value);
+            var format8Price = parseInt(document.getElementById('format8Price').value);
+            var format9Price = parseInt(document.getElementById('format9Price').value);
 
 
-            var total = (format1Price * format1Quantity) + (format2Price * format2Quantity) + (format3Price * format3Quantity) + (format4Price * format4Quantity) + (format5Price * format5Quantity) + (format6Price * format6Quantity);
+
+
+
+            var total = (format1Price * format1Quantity) + (format2Price * format2Quantity) + (format3Price * format3Quantity) + (format4Price * format4Quantity) + 
+(format5Price * format5Quantity) + (format6Price * format6Quantity) + (format7Price * format7Quantity) + (format8Price * format8Quantity) + (format9Price * format9Quantity);
 
             document.getElementById('total').innerHTML = 'Загальна сума: ' + total + ' грн.';
         }
