--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
             margin-bottom: 10px;
         }
         label {
-            margin-right: 10px;
+            width: 190px;
+            text-align: right;
+			margin-right: 10px;
             color: #555;
         }
         input[type="number"] {
