--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <p>Якщо ви готові оплатити 
     <p>Карта ПриватБанку:
     </p>
-    <p><strong>4731 2106 4872 4030</strong></p>   
+    <p><strong class="red-text">4731 2106 4872 4030</strong></p> 
     <script>
         function calculateTotal() {
             var format1Quantity = parseInt(document.getElementById('format1Quantity').value);
